RESOLVED FIXED45885
[Qt] Original window overlapped on Symbian platform with a new window when we "Take screen shot" in QtTestBrowser.
https://bugs.webkit.org/show_bug.cgi?id=45885
Summary [Qt] Original window overlapped on Symbian platform with a new window when we...
Leonid Ebril
Reported 2010-09-16 06:34:13 PDT
Steps to reproduce: 1. Start QtTestBrowser 2. Options->File->Take screen shot Result: Screen shot window is created and overlap original window Expected result: file explore window should be created
Attachments
Fix (1.68 KB, patch)
2010-09-16 07:05 PDT, Leonid Ebril
no flags
Leonid Ebril
Comment 1 2010-09-16 07:05:39 PDT
Suresh Voruganti
Comment 2 2010-09-16 10:09:30 PDT
Please cherry pick this fix to QtWebkit 2.1
Ademar Reis
Comment 3 2010-09-16 10:57:32 PDT
This bug is marked as fixed, but the patch is pending review and there are no traces of it being integrated into trunk. I'm assuming it was a mistake and thus reopening it.
Andreas Kling
Comment 4 2010-09-16 13:15:56 PDT
Comment on attachment 67792 [details] Fix LGTM.
WebKit Commit Bot
Comment 5 2010-09-16 13:31:10 PDT
Comment on attachment 67792 [details] Fix Clearing flags on attachment: 67792 Committed r67662: <http://trac.webkit.org/changeset/67662>
WebKit Commit Bot
Comment 6 2010-09-16 13:31:16 PDT
All reviewed patches have been landed. Closing bug.
Laszlo Gombos
Comment 7 2010-09-17 05:59:26 PDT
Is this really specific to Symbian or perhaps it is more has to do with the size of the screen ?
Leonid Ebril
Comment 8 2010-09-17 08:07:01 PDT
The cause of this issue is that a new window created on Symbian platform on the top of original window. We can not do any actions in the original window (e.g. close original window). I'm not sure if this issue is reproducible on linux-based browser.
Ademar Reis
Comment 9 2010-09-17 12:34:22 PDT
Revision r67662 cherry-picked into qtwebkit-2.1 with commit a1ecc49 <http://gitorious.org/webkit/qtwebkit/commit/a1ecc49>
Note You need to log in before you can comment on or make changes to this bug.