2010-09-16  Leonid Ebril  <leonid.ebril@nokia.com>

Reviewed by Andreas Kling.

        [Qt] QtTestBrowser: Disable creation of a new window for screenshot on Symbian platform.
        https://bugs.webkit.org/show_bug.cgi?id=45885

        Avoid creation of an additional window for screenshot to prevent overlapping with original window.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::screenshot):

Canonical link: https://commits.webkit.org/58383@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67662 268f45cc-cd09-0410-ab3c-d52691b4dbfc